--- a/Bai 2/bai2.html
+++ b/Bai 2/bai2.html
@@ -20,20 +20,20 @@
                 document.writeln("<tr>");
                 document.writeln("<td>01</td>");
                 document.writeln("<td>2122110528</td>");
-                document.writeln("<td>Hà Mỹ Duyên</td>");
+                document.writeln("<td>Dương Mỹ Như</td>");
                 document.writeln("<td>CCQ2211M</td>");
                 document.writeln("</tr>");
 
                 document.writeln("<tr>");
                 document.writeln("<td>02</td>");
                 document.writeln("<td>2122110529</td>");
-                document.writeln("<td>Nguyễn Thanh Tâm</td>");
+                document.writeln("<td>Ngô Lan Tâm</td>");
                 document.writeln("<td>CCQ2211M</td>");
                 document.writeln("</tr>");
 
                 document.writeln("<tr>");
                 document.writeln("<td>03</td>");
-                document.writeln("<td>2122110530</td>");
+                document.writeln("<td>212211050</td>");
                 document.writeln("<td>Nguyễn Thị Thân</td>");
                 document.writeln("<td>CCQ2211M</td>");
                 document.writeln("</tr>");
