--- a/Bai 1/bai1.html
+++ b/Bai 1/bai1.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <script>
-        let masv = "2122110528";
-        let hoten = "Ha My Duyen";
+        let masv = "2122110580";
+        let hoten = "Duong Dao Huynh Như";
         document.writeln("<h1>"+masv+"</h1>")
         document.writeln("<h1>"+hoten+"</h1>")
     </script>
